<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    android:backgroundTint="@color/app_components"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/item_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/item_icon"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/expense_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date" />

            <TextView
                android:id="@+id/amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_amount"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/edit_btn"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background=""
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/delete_btn"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background=""
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>